[package]
name = "rust-beer-api"
version = "0.1.0"
authors = ["Joel Holmes <jholmes@ecr.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
diesel = { version = "^1.1.0", features = ["sqlite", "r2d2"] }
r2d2 = "0.8"